ASoC: nau8821: new driver
The driver is for codec NAU88L21 of Nuvoton Technology Corporation.
The NAU88L21 is an ultra-low power high performance audio codec that
supports both analog and digital audio functions.

    Signed-off-by: Seven Lee <wtli@nuvoton.com>
    Link: https://lore.kernel.org/r/20211001103108.3297848-1-wtli@nuvoton.com
    Signed-off-by: Mark Brown <broonie@kernel.org>

Author: Seven Lee <wtli@nuvoton.com>
Date: Fri Oct 1 18:31:08 2021 +0800

Signed-off-by: Jaroslav Kysela <jkysela@redhat.com>
(cherry picked from commit aab1ad11d69fa7f35cb88105614ea7911598e1d6)
Bugzilla: https://bugzilla.redhat.com/2017320

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -138,6 +138,7 @@ config SND_SOC_ALL_CODECS
 	imply SND_SOC_NAU8315
 	imply SND_SOC_NAU8540
 	imply SND_SOC_NAU8810
+	imply SND_SOC_NAU8821
 	imply SND_SOC_NAU8822
 	imply SND_SOC_NAU8824
 	imply SND_SOC_NAU8825
@@ -1920,6 +1921,10 @@ config SND_SOC_NAU8540
 
 config SND_SOC_NAU8810
 	tristate "Nuvoton Technology Corporation NAU88C10 CODEC"
+	depends on I2C
+
+config SND_SOC_NAU8821
+	tristate "Nuvoton Technology Corporation NAU88L21 CODEC"
 	depends on I2C
 
 config SND_SOC_NAU8822
