--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,11 @@ c9s_automotive_baseline:
             .automotive_pipeline_common,
             .trigger_c9s_pipeline, .automotive_full_c9s]
 
+c9s_automotive_baseline_coverage_build:
+  extends: [.trusted, .baseline, .9-common, .automotive_pipeline_common,
+            .only_build_and_publish, .coverage,
+            .trigger_c9s_pipeline, .automotive_full_c9s]
+
 # RHEL9 CI
 rhel9_merge_request:
   extends: [.internal, .merge_request, .rhel_common, .with_notifications,
