redhat: bring back commit hash reference to build cbs.
Bugzilla: INTERNAL
Upstream Status: RHEL only

This commit reverts the tag to bring back AUTOCOMMIT (renamed as
AUTOGITREF) to generate a build. Now, AUTOGITREF can be a commit hash or
a tag. All you need to define is if you gonna use tags or commit hashed
defined by variable AUTOUSETAGS.

Signed-off-by: Julio Faracco <jfaracco@redhat.com>

--- a/redhat/Makefile.automotive
+++ b/redhat/Makefile.automotive
@@ -4,3 +4,12 @@ CSGITURL ?= git+https://git.centos.org/rpms/
 ifeq ("$(DISTRO)", "centos")
   AUTOSIG_BRANCH:="c$(RHEL_MAJOR)s-sig-automotive-main"
 endif
+
+AUTOUSETAGS?=
+
+ifneq ("$(AUTOUSETAGS)", "y")
+  # Revision of the latest source added into repository
+  AUTOGITREF?=aa4f9a838330919f6205c1a9636505e4bb0a43b0
+else
+  AUTOGITREF?=$(PACKAGE_NAME)-$(STAMP_VERSION)-$(PKGRELEASE)
+endif
