CI: Use realtime_check_baseline template
The merge_tree variable differs baseline on whether the pipeline runs
for a merge request or a baseline. Use a specific template rather than
adding the single variable, so we have easier time extending the run if
needed in the future.

Bugzilla: INTERNAL
Upstream Status: RHEL-only

Signed-off-by: Veronika Kabatova <vkabatov@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ c9s_baseline:
 c9s_realtime_check_baseline:
   extends: [.trusted, .baseline,
             .9-common,
-            .realtime_check_common,
+            .realtime_check_baseline,
             .trigger_c9s_pipeline, .realtime_check_c9s]
 
 c9s_rhel9_compat_merge_request:
