owners: add reviewers to SELinux subsystem
Long time overdue, I finally got around to recruit some reviewers for
SELinux and update owners.yaml.

Signed-off-by: Ondrej Mosnacek <omosnace@redhat.com>

--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -3923,6 +3923,11 @@ subsystems:
    maintainers:
      - name: Ondrej Mosnacek
        email: omosnace@redhat.com
+   reviewers:
+     - name: Richard Guy Briggs
+       email: rbriggs@redhat.com
+     - name: Wander Costa
+       email: wcosta@redhat.com
    paths:
        includes:
           - include/linux/selinux*
