owners.yaml: Add arch_hw provided information
Add arch_hw provided information.

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -166,6 +166,9 @@ drivers/net/ethernet/realtek/r8169.c	joskera@redhat.com
 ^[8139CP 10/100 MEGABIT ETHERNET DRIVER (8139cp)]
 drivers/net/ethernet/realtek/8139cp.c	ivecera@redhat.com
 
+^[ACCESSIBILITY SUBSYSTEM]
+drivers/accessibility	dledford@redhat.com prarit@redhat.com
+
 ^[ACPI SUBSYSTEM]
 drivers/acpi/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
 drivers/pnp/pnpacpi/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
@@ -330,9 +333,9 @@ Documentation/filesystems/ceph.txt	jlayton@redhat.com
 fs/ceph/	jlayton@redhat.com
 
 ^[CHAR and MISC DRIVERS]
-drivers/char/	linville@redhat.com
-drivers/misc/	linville@redhat.com
-include/linux/miscdevice.h	linville@redhat.com
+drivers/char/	dledford@redhat.com prarit@redhat.com
+drivers/misc/	dledford@redhat.com prarit@redhat.com
+include/linux/miscdevice.h	dledford@redhat.com prarit@redhat.com
 
 ^[CIFS FILESYSTEM]
 fs/cifs/	
@@ -363,9 +366,9 @@ mm/memcontrol.c	longman@redhat.com
 mm/swap_cgroup.c	longman@redhat.com
 
 ^[COUNTER SUBSYSTEM]
-drivers/counter/	prarit@redhat.com
-include/linux/counter.h	prarit@redhat.com
-include/linux/counter_enum.h	prarit@redhat.com
+drivers/counter/	dledford@redhat.com prarit@redhat.com
+include/linux/counter.h	dledford@redhat.com prarit@redhat.com
+include/linux/counter_enum.h	dledford@redhat.com prarit@redhat.com
 
 [CPU FREQUENCY DRIVERS]
 drivers/cpufreq/	ahs3@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
@@ -483,6 +486,9 @@ include/uapi/linux/mii.h	poros@redhat.com
 Documentation/filesystems/ext4/ext4.rst	lczerner@redhat.com
 fs/ext4/	lczerner@redhat.com
 
+^[EXTERNAL CONNECTOR SUBSYSTEM (EXTCON)]
+drivers/extcon	dledford@redhat.com prarit@redhat.com
+
 ^[FCOE (libfc, libfcoe)]
 drivers/scsi/libfc/	jmeneghi@redhat.com
 drivers/scsi/fcoe/	jmeneghi@redhat.com
@@ -588,6 +594,15 @@ include/linux/i2c.h	gtiwari@redhat.com darcari@redhat.com
 include/linux/i2c-*.h	gtiwari@redhat.com darcari@redhat.com
 include/uapi/linux/i2c.h	gtiwari@redhat.com darcari@redhat.com
 include/uapi/linux/i2c-*.h	gtiwari@redhat.com darcari@redhat.com
+
+^[HARDWARE SPINLOCK CORE]
+drivers/hwspinlock	dledford@redhat.com prarit@redhat.com
+
+^[HARDWARE TRACING FACILITIES]
+drivers/hwtracing	dledford@redhat.com prarit@redhat.com
+
+^[INDUSTRIAL I/O SUBSYSTEM (IIO)]
+drivers/iio/	dledford@redhat.com prarit@redhat.com
 
 ^[INFINIBAND SUBSYSTEM]
 drivers/infiniband/	kheib@redhat.com
@@ -1155,8 +1170,14 @@ net/openvswitch/	fbl@redhat.com
 include/linux/openvswitch.h	fbl@redhat.com
 include/uapi/linux/openvswitch.h	fbl@redhat.com
 
+^[OPEN FIRMWARE AND FLATTENED DEVICE TREE]
+drivers/of	dledford@redhat.com prarit@redhat.com
+
 ^[OVERLAY FILESYSTEM]
 fs/overlayfs/	mszeredi@redhat.com
+
+^[PARALLEL PORT SUBSYSTEM]
+drivers/parport	dledford@redhat.com prarit@redhat.com
 
 ^[PCI SUBSYSTEM]
 drivers/pci/	myron.stowe@redhat.com prarit@redhat.com
@@ -1189,6 +1210,9 @@ drivers/platform/mellanox/	mlangsdo@redhat.com
 ^[PLATFORM DRIVERS X86]
 drivers/platform/x86/	darcari@redhat.com
 
+^[PNP SUPPORT]
+drivers/pnp	dledford@redhat.com prarit@redhat.com
+
 ^[POWER DRIVERS (Batteries, power supplies, etc.)]
 drivers/power/	lszubowi@redhat.com
 
@@ -1199,6 +1223,9 @@ include/uapi/linux/psci.h	msalter@redhat.com mlangsdo@redhat.com jlinton@redhat.
 
 ^[POWERPC (64-BIT)]
 arch/powerpc/	
+
+^[PPS SUPPORT]
+drivers/pps	dledford@redhat.com prarit@redhat.com
 
 ^[PSTORE PERSISTENT STORAGE]
 Documentation/ABI/testing/pstore	lszubowi@redhat.com ahs3@redhat.com
@@ -1211,6 +1238,9 @@ include/linux/ptp_cl*	jbenc@redhat.com prarit@redhat.com
 
 ^[PTP KVM]
 drivers/ptp/ptp_kvm.c	mtosatti@redhat.com
+
+^[PULSE-WIDTH MODULATION SUPPORT (PWM)]
+drivers/pwm/	dledford@redhat.com prarit@redhat.com
 
 ^[QLOGIC QLA2XXX FC-SCSI DRIVER]
 drivers/scsi/qla2xxx/	njavali@redhat.com aeasi@redhat.com emilne@redhat.com
@@ -1250,10 +1280,16 @@ Documentation/ABI/testing/sysfs-bus-rbd	idryomov@redhat.com
 drivers/block/rbd.c	idryomov@redhat.com
 drivers/block/rbd_types.h	idryomov@redhat.com
 
+^[RAS INFRASTRUCTURE]
+drivers/ras	dledford@redhat.com prarit@redhat.com
+
 ^[READ-COPY UPDATE (RCU)]
 Documentation/RCU/	longman@redhat.com
 include/linux/rcu*	longman@redhat.com
 kernel/rcu/	longman@redhat.com
+
+^[REMOTE PROCESSOR (REMOTEPROC) SUBSYSTEM]
+drivers/remoteproc	dledford@redhat.com prarit@redhat.com
 
 ^[RFKILL]
 Documentation/rfkill.txt	linville@redhat.com
@@ -1364,6 +1400,12 @@ include/uapi/rdma/rdma_user_rxe.h	kheib@redhat.com
 Documentation/filesystems/squashfs.txt	adas@redhat.com
 fs/squashfs/	adas@redhat.com
 
+^[SONY MEMORYSTICK SUBSYSTEM]
+drivers/memstick	dledford@redhat.com prarit@redhat.com
+
+^[SOUNDWIRE SUBSYSTEM]
+drivers/soundwire	dledford@redhat.com prarit@redhat.com
+
 ^[SPEAKUP]
 Documentation/ABI/stable/sysfs-driver-speakup	linville@redhat.com
 drivers/accessibility/speakup/	linville@redhat.com
@@ -1381,7 +1423,7 @@ Documentation/networking/switchdev.txt	ivecera@redhat.com
 include/net/switchdev.h	ivecera@redhat.com
 net/switchdev/	ivecera@redhat.com
 
-^[SYSTEM ON CHIP]
+^[SYSTEM ON CHIP (SOC)]
 drivers/soc/	msalter@redhat.com
 include/linux/soc/	msalter@redhat.com
 
@@ -1395,6 +1437,9 @@ include/uapi/linux/pkt_sched.h	ivecera@redhat.com
 include/uapi/linux/tc_act/	ivecera@redhat.com
 include/uapi/linux/tc_ematch/	ivecera@redhat.com
 net/sched/	ivecera@redhat.com
+
+^[TEE SUBSYSTEM]
+drivers/tee	dledford@redhat.com prarit@redhat.com
 
 ^[THERMAL]
 drivers/thermal/	darcari@redhat.com
