--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -533,6 +533,18 @@ subsystems:
    paths:
        includes:
           - drivers/net/ethernet/realtek/8139cp.c
+ - subsystem: ACCESSIBILITY SUBSYSTEM
+   labels:
+     name: accessibility
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/accessibility
  - subsystem: ACPI SUBSYSTEM
    labels:
      name: acpi
@@ -1108,8 +1120,10 @@ subsystems:
    status: Supported
    requiredApproval: false
    maintainers:
-     - name: John Linville
-       email: linville@redhat.com
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
    paths:
        includes:
           - drivers/char/
@@ -1219,9 +1233,11 @@ subsystems:
  - subsystem: COUNTER SUBSYSTEM
    labels:
      name: counter
-   status: Supported
+   status: Provided
    requiredApproval: false
    maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
      - name: Prarit Bhargava
        email: prarit@redhat.com
    paths:
@@ -1633,6 +1649,18 @@ subsystems:
        includes:
           - Documentation/filesystems/ext4/ext4.rst
           - fs/ext4/
+ - subsystem: EXTERNAL CONNECTOR SUBSYSTEM (EXTCON)
+   labels:
+     name: extcon
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/extcon
  - subsystem: FCOE (libfc, libfcoe)
    labels:
      name: libfc
@@ -1963,6 +1991,30 @@ subsystems:
           - include/linux/i2c-*.h
           - include/uapi/linux/i2c.h
           - include/uapi/linux/i2c-*.h
+ - subsystem: HARDWARE SPINLOCK CORE
+   labels:
+     name: hwspinlock
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/hwspinlock
+ - subsystem: HARDWARE TRACING FACILITIES
+   labels:
+     name: hwtracing
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/hwtracing
  - subsystem: I3C SUBSYSTEM
    labels:
      name: i3c
@@ -1976,9 +2028,13 @@ subsystems:
  - subsystem: INDUSTRIAL I/O SUBSYSTEM (IIO)
    labels:
      name: iio
-   status: Unassigned
+   status: Provided
    requiredApproval: false
    maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
    paths:
        includes:
           - drivers/iio/
@@ -3526,6 +3582,18 @@ subsystems:
           - net/openvswitch/
           - include/linux/openvswitch.h
           - include/uapi/linux/openvswitch.h
+ - subsystem: OPEN FIRMWARE AND FLATTENED DEVICE TREE
+   labels:
+     name: of
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/of
  - subsystem: OVERLAY FILESYSTEM
    labels:
      name: overlayfs
@@ -3537,6 +3605,18 @@ subsystems:
    paths:
        includes:
           - fs/overlayfs/
+ - subsystem: PARALLEL PORT SUBSYSTEM
+   labels:
+     name: parport
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/parport
  - subsystem: PCI SUBSYSTEM
    labels:
      name: pci
@@ -3658,6 +3738,18 @@ subsystems:
    paths:
        includes:
           - drivers/platform/x86/
+ - subsystem: PNP SUPPORT
+   labels:
+     name: pnp
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/pnp
  - subsystem: POWER DRIVERS (Batteries, power supplies, etc.)
    labels:
      name: batteries
@@ -3694,6 +3786,18 @@ subsystems:
    paths:
        includes:
           - arch/powerpc/
+ - subsystem: PPS SUPPORT
+   labels:
+     name: pps
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/pps
  - subsystem: PSTORE PERSISTENT STORAGE
    labels:
      name: pstore
@@ -3737,9 +3841,13 @@ subsystems:
  - subsystem: PULSE-WIDTH MODULATION SUPPORT (PWM)
    labels:
      name: pwm
-   status: Unassigned
+   status: Provided
    requiredApproval: false
    maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
    paths:
        includes:
           - drivers/pwm/
@@ -3910,6 +4018,18 @@ subsystems:
           - Documentation/ABI/testing/sysfs-bus-rbd
           - drivers/block/rbd.c
           - drivers/block/rbd_types.h
+ - subsystem: RAS INFRASTRUCTURE
+   labels:
+     name: ras
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/ras
  - subsystem: READ-COPY UPDATE (RCU)
    labels:
      name: rcu
@@ -3934,6 +4054,18 @@ subsystems:
           - Documentation/RCU/
           - include/linux/rcu*
           - kernel/rcu/
+ - subsystem: REMOTE PROCESSOR (REMOTEPROC) SUBSYSTEM
+   labels:
+     name: remoteproc
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/remoteproc
  - subsystem: RESET DRIVERS
    labels:
      name: reset
@@ -4307,6 +4439,30 @@ subsystems:
    paths:
        includes:
           - drivers/ssb
+ - subsystem: SONY MEMORYSTICK SUBSYSTEM
+   labels:
+     name: sonymemstick
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/memstick
+ - subsystem: SOUNDWIRE SUBSYSTEM
+   labels:
+     name: soundwire
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/soundwire
  - subsystem: SPEAKUP
    labels:
      name: speakup
@@ -4385,7 +4541,7 @@ subsystems:
           - Documentation/networking/switchdev.txt
           - include/net/switchdev.h
           - net/switchdev/
- - subsystem: SYSTEM ON CHIP
+ - subsystem: SYSTEM ON CHIP (SOC)
    labels:
      name: soc
    status: Supported
@@ -4418,6 +4574,18 @@ subsystems:
           - include/uapi/linux/tc_act/
           - include/uapi/linux/tc_ematch/
           - net/sched/
+ - subsystem: TEE SUBSYSTEM
+   labels:
+     name: tee
+   status: Provided
+   maintainers:
+     - name: Doug Ledford
+       email: dledford@redhat.com
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+   paths:
+       includes:
+          - drivers/tee
  - subsystem: THERMAL
    labels:
      name: thermal
