owners: tag jwilson for optional review of all ethernet drivers
Personally, I find ethernet driver code changes relaxing to review, and
would like to be tagged for optional review on all of them.

Signed-off-by: Jarod Wilson <jarod@redhat.com>

--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -1583,6 +1583,9 @@ subsystems:
      name: ethernet
    status: Supported
    requiredApproval: false
+   reviewers:
+     - name: Jarod Wilson
+       email: jarod@redhat.com
    paths:
        includes:
           - drivers/net/ethernet/
