owners.yaml: Cleanup entries
Cleanup the Memory Hotplug and IPMI entries.

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -740,6 +740,13 @@ include/linux/irqchip.h	msalter@redhat.com
 drivers/iommu/	jsnitsel@redhat.com myron.stowe@redhat.com alex.williamson@redhat.com ddutile@redhat.com
 
 ^[IPMI SUBSYSTEM]
+drivers/char/ipmi/	tcamuso@redhat.com
+include/linux/ipmi-fru.h	tcamuso@redhat.com
+include/linux/ipmi.h	tcamuso@redhat.com
+include/linux/ipmi_smi.h	tcamuso@redhat.com
+include/uapi/linux/ipmi.h	tcamuso@redhat.com
+include/uapi/linux/ipmi_bmc.h	tcamuso@redhat.com
+include/uapi/linux/ipmi_msgdefs.h	tcamuso@redhat.com
 
 ^[ISCSI (iscsi_tcp, libiscsi, libiscsi_tcp, scsi_transport_iscsi)]
 drivers/scsi/*iscsi*	cleech@redhat.com
@@ -883,13 +890,8 @@ include/uapi/linux/ivtv*	jarod@redhat.com
 drivers/net/ethernet/mellanox/mlxsw/	ivecera@redhat.com
 
 ^[MEMORY HOTPLUG]
-drivers/char/ipmi/	prarit@redhat.com
-include/linux/ipmi-fru.h	prarit@redhat.com
-include/linux/ipmi.h	prarit@redhat.com
-include/linux/ipmi_smi.h	prarit@redhat.com
-include/uapi/linux/ipmi.h	prarit@redhat.com
-include/uapi/linux/ipmi_bmc.h	prarit@redhat.com
-include/uapi/linux/ipmi_msgdefs.h	prarit@redhat.com
+drivers/acpi/acpi_memhotplug.c	prarit@redhat.com
+include/linux/memory_hotplug.h	prarit@redhat.com
 
 [MEMORY MANAGEMENT]
 arch/arm64/mm/	aquini@redhat.com
