--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -2475,6 +2475,15 @@ subsystems:
      - name: Tony Camuso
        email: tcamuso@redhat.com
    paths:
+       includes:
+          - drivers/char/ipmi/
+          - include/linux/ipmi-fru.h
+          - include/linux/ipmi.h
+          - include/linux/ipmi_smi.h
+          - include/uapi/linux/ipmi.h
+          - include/uapi/linux/ipmi_bmc.h
+          - include/uapi/linux/ipmi_msgdefs.h
+
  - subsystem: ISCSI (iscsi_tcp, libiscsi, libiscsi_tcp, scsi_transport_iscsi)
    labels:
      name: iscsi
@@ -2912,13 +2921,8 @@ subsystems:
        email: prarit@redhat.com
    paths:
        includes:
-          - drivers/char/ipmi/
-          - include/linux/ipmi-fru.h
-          - include/linux/ipmi.h
-          - include/linux/ipmi_smi.h
-          - include/uapi/linux/ipmi.h
-          - include/uapi/linux/ipmi_bmc.h
-          - include/uapi/linux/ipmi_msgdefs.h
+          - drivers/acpi/acpi_memhotplug.c
+          - include/linux/memory_hotplug.h
  - subsystem: MEMORY MANAGEMENT
    labels:
      name: mm
