owners.yaml: Added AFS maintainer entry
Added Partner Engineer (mdionne) as primary maintainer and Product Owner
(ajmitchell) as a reviewer for AFS directories.

Signed-off-by: Andrew Walsh <awalsh@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -225,6 +225,10 @@ include/acpi/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@
 arch/x86/kernel/acpi/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
 arch/arm64/kernel/acpi*	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
 
+[AFS]
+fs/afs/	mdionne@redhat.com
+net/rxrpc/	mdionne@redhat.com
+
 ^[AIO]
 fs/aio.c	jmoyer@redhat.com
 include/linux/*aio*.h	jmoyer@redhat.com
