--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -743,6 +743,23 @@ subsystems:
           - include/acpi/
           - arch/x86/kernel/acpi/
           - arch/arm64/kernel/acpi*
+ - subsystem: AFS
+   labels:
+     name: afs
+   status: Supported
+   requiredApproval: true
+   maintainers:
+     - name: Marc Dionne
+       email: mdionne@redhat.com
+       gluser: mdionne
+   reviewers:
+     - name: Alice Mitchell
+       email: ajmitchell@redhat.com
+       gluser: ajmitchell
+   paths:
+       includes:
+          - fs/afs/
+          - net/rxrpc/
  - subsystem: AIO
    labels:
      name: aio
