owners.yaml: Add a new entry for X86 CPU POWER MANAGEMENT
Add an entry for X86 CPU POWER MANAGEMENT.

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -440,7 +440,11 @@ include/linux/counter_enum.h	dledford@redhat.com prarit@redhat.com
 
 [CPU FREQUENCY DRIVERS]
 drivers/cpufreq/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
-arch/x86/kernel/cpu/cpufreq/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
+^drivers/cpufreq/intel_pstate.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
+^drivers/cpufreq/amd-pstate-trace.h	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
+^drivers/cpufreq/amd_freq_sensitivity.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
+^drivers/cpufreq/amd-pstate.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
+^drivers/cpufreq/amd-pstate-trace.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
 
 [CPU IDLE DRIVERS]
 drivers/cpuidle/	mlangsdo@redhat.com prarit@redhat.com darcari@redhat.com
@@ -1785,6 +1789,7 @@ tools/power/x86/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/include/uapi/asm/kvm*	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/include/uapi/asm/svm.h	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/include/uapi/asm/vmx.h	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
+^arch/x86/kernel/cpu/cpufreq/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/kernel/cpu/mshyperv.c	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/kernel/fpu/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/kernel/kvm.c	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
@@ -1792,6 +1797,15 @@ tools/power/x86/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/kvm/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/kvm/svm.c	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 ^arch/x86/net/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
+
+[X86 CPU POWER MANAGEMENT]
+arch/x86/kernel/cpu/cpufreq/	prarit@redhat.com darcari@redhat.com
+drivers/cpufreq/intel_pstate.c	prarit@redhat.com darcari@redhat.com
+drivers/cpufreq/amd-pstate-trace.h	prarit@redhat.com darcari@redhat.com
+drivers/cpufreq/amd_freq_sensitivity.c	prarit@redhat.com darcari@redhat.com
+drivers/cpufreq/amd-pstate.c	prarit@redhat.com darcari@redhat.com
+drivers/cpufreq/amd-pstate-trace.c	prarit@redhat.com darcari@redhat.com
+drivers/idle/intel_idle.c	prarit@redhat.com darcari@redhat.com
 
 [X86 FPU SUBSYSTEM]
 arch/x86/include/asm/fpu/	dnelson@redhat.com
