--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -1612,7 +1612,12 @@ subsystems:
    paths:
        includes:
           - drivers/cpufreq/
-          - arch/x86/kernel/cpu/cpufreq/
+       excludes:
+          - drivers/cpufreq/intel_pstate.c
+          - drivers/cpufreq/amd-pstate-trace.h
+          - drivers/cpufreq/amd_freq_sensitivity.c
+          - drivers/cpufreq/amd-pstate.c
+          - drivers/cpufreq/amd-pstate-trace.c
  - subsystem: CPU IDLE DRIVERS
    labels:
      name: cpuidle
@@ -6249,6 +6254,7 @@ subsystems:
           - arch/x86/include/uapi/asm/kvm*
           - arch/x86/include/uapi/asm/svm.h
           - arch/x86/include/uapi/asm/vmx.h
+          - arch/x86/kernel/cpu/cpufreq/
           - arch/x86/kernel/cpu/mshyperv.c
           - arch/x86/kernel/fpu/
           - arch/x86/kernel/kvm.c
@@ -6256,6 +6262,27 @@ subsystems:
           - arch/x86/kvm/
           - arch/x86/kvm/svm.c
           - arch/x86/net/
+ - subsystem: X86 CPU POWER MANAGEMENT
+   labels:
+     name: x86pm
+   status: Supported
+   requiredApproval: true
+   maintainers:
+     - name: Prarit Bhargava
+       email: prarit@redhat.com
+       gluser: prarit
+     - name: David Arcari
+       email: darcari@redhat.com
+       gluser: darcari
+   paths:
+       includes:
+          - arch/x86/kernel/cpu/cpufreq/
+          - drivers/cpufreq/intel_pstate.c
+          - drivers/cpufreq/amd-pstate-trace.h
+          - drivers/cpufreq/amd_freq_sensitivity.c
+          - drivers/cpufreq/amd-pstate.c
+          - drivers/cpufreq/amd-pstate-trace.c
+          - drivers/idle/intel_idle.c
  - subsystem: X86 FPU SUBSYSTEM
    labels:
      name: x86fpu
