owners.yaml: Add new maintainers for AutoSD
This commit just adds jfaracco and scweaver as the maintainers to
Automotive Stream Distribution (AutoSD) project. AutoSD should be a
branch inside CentOS Stream 9 repository.

Signed-off-by: Julio Faracco <jfaracco@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -5,6 +5,12 @@ Makefile.rhelver	jforbes@redhat.com jforbes@fedoraproject.org ptalbert@redhat.co
 redhat/	jforbes@redhat.com jforbes@fedoraproject.org ptalbert@redhat.com
 ^redhat/configs/	jforbes@redhat.com jforbes@fedoraproject.org ptalbert@redhat.com
 
+[Automotive Stream Distribution Kernel Maintainer]
+makefile	jfaracco@redhat.com scweaver@redhat.com
+Makefile.rhelver	jfaracco@redhat.com scweaver@redhat.com
+redhat/	jfaracco@redhat.com scweaver@redhat.com
+^redhat/configs/	jfaracco@redhat.com scweaver@redhat.com
+
 [CentOS Stream 9 Kernel Maintainer]
 makefile	herton@redhat.com
 Makefile.rhelver	herton@redhat.com
