--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -60,6 +60,25 @@ subsystems:
    scm: git https://gitlab.com/cki-project/kernel-ark.git
    # L:
    mailingList: 
+ - subsystem: Automotive Stream Distribution Kernel Maintainer
+   labels:
+     name: redhat
+   status: Supported
+   requiredApproval: true
+   maintainers:
+     - name: Julio Faracco
+       email: jfaracco@redhat.com
+       gluser: jfaracco
+     - name: Scott Weaver
+       email: scweaver@redhat.com
+       gluser: scweaver
+   paths:
+       includes:
+          - makefile
+          - Makefile.rhelver
+          - redhat/
+       excludes:
+          - redhat/configs/
  - subsystem: CentOS Stream 9 Kernel Maintainer
    labels:
      name: redhat
