owners.yaml: Add support for Qualcomm drivers
Signed-off-by: Julio Faracco <jfaracco@redhat.com>

--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -1044,6 +1044,60 @@ subsystems:
        includes:
           - drivers/iommu/arm/
           - drivers/iommu/io-pgtable-arm.c
+ - subsystem: ARM/QUALCOMM SUPPORT
+   labels:
+     name: qcom
+   status: Supported
+   requiredApproval: true
+   maintainers:
+     - name: Adrien Thierry
+       email: athierry@redhat.com
+       gluser: athierry1
+     - name: Andrew Halaney
+       email: ahalaney@redhat.com
+       gluser: ahalaney
+     - name: Brian Masney
+       email: bmasney@redhat.com
+       gluser: bmasney
+     - name: Eric Chanudet
+       email: echanude@redhat.com
+       gluser: echanude
+   paths:
+       includes:
+          - Documentation/devicetree/bindings/*/qcom*
+          - Documentation/devicetree/bindings/soc/qcom/
+          - arch/arm/boot/dts/qcom-*.dts
+          - arch/arm/boot/dts/qcom-*.dtsi
+          - arch/arm/mach-qcom/
+          - arch/arm64/boot/dts/qcom/
+          - drivers/*/*/qcom*
+          - drivers/*/*/qcom/
+          - drivers/*/pm8???-*
+          - drivers/*/qcom*
+          - drivers/*/qcom/
+          - drivers/bluetooth/btqcomsmd.c
+          - drivers/clocksource/timer-qcom.c
+          - drivers/cpuidle/cpuidle-qcom-spm.c
+          - drivers/extcon/extcon-qcom*
+          - drivers/i2c/busses/i2c-qcom-geni.c
+          - drivers/i2c/busses/i2c-qup.c
+          - drivers/iommu/msm*
+          - drivers/mfd/ssbi.c
+          - drivers/mmc/host/mmci_qcom*
+          - drivers/mmc/host/sdhci-msm.c
+          - drivers/pci/controller/dwc/pcie-qcom.c
+          - drivers/phy/qualcomm/
+          - drivers/power/*/msm*
+          - drivers/reset/reset-qcom-*
+          - drivers/ufs/host/ufs-qcom*
+          - drivers/spi/spi-geni-qcom.c
+          - drivers/spi/spi-qcom-qspi.c
+          - drivers/spi/spi-qup.c
+          - drivers/tty/serial/msm_serial.c
+          - drivers/usb/dwc3/dwc3-qcom.c
+          - include/dt-bindings/*/qcom*
+          - include/linux/*/qcom*
+          - include/linux/soc/qcom/
  - subsystem: ARM64 PORT (AARCH64 ARCHITECTURE)
    labels:
      name: arm64
