owners.yaml: Remove fpacheco
Remove fpacheco.

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -18,10 +18,10 @@ redhat/	ptalbert@redhat.com
 ^redhat/configs/	ptalbert@redhat.com
 
 [RHEL 9.1 Real Time Kernel Maintainer]
-makefile	fpacheco@redhat.com
-Makefile.rhelver	fpacheco@redhat.com
-redhat/	fpacheco@redhat.com
-^redhat/configs/	fpacheco@redhat.com
+makefile	lgoncalv@redhat.com
+Makefile.rhelver	lgoncalv@redhat.com
+redhat/	lgoncalv@redhat.com
+^redhat/configs/	lgoncalv@redhat.com
 
 [RHEL 9.0 Kernel Maintainer]
 makefile	herton@redhat.com
@@ -66,10 +66,10 @@ redhat/
 ^redhat/configs/	
 
 [RHEL 8.5 Real Time Kernel Maintainer]
-makefile	fpacheco@redhat.com
-Makefile.rhelver	fpacheco@redhat.com
-redhat/	fpacheco@redhat.com
-^redhat/configs/	fpacheco@redhat.com
+makefile	
+Makefile.rhelver	
+redhat/	
+^redhat/configs/	
 
 [RHEL 8.4 Kernel Maintainer]
 makefile	lzampier@redhat.com
