--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -99,9 +99,9 @@ subsystems:
    status: Supported
    requiredApproval: true
    maintainers:
-     - name: Fernando Pacheco
-       email: fpacheco@redhat.com
-       gluser: pachecof
+     - name: Luis Claudio Goncalves
+       email: lgoncalv@redhat.com
+       gluser: lgoncalv
    paths:
        includes:
           - makefile
@@ -227,9 +227,6 @@ subsystems:
    status: Provided
    requiredApproval: true
    maintainers:
-     - name: Fernando Pacheco
-       email: fpacheco@redhat.com
-       gluser: pachecof
    paths:
        includes:
           - makefile
@@ -5205,9 +5202,6 @@ subsystems:
      - name: Daniel Bristot
        email: bristot@redhat.com
        gluser: daolivei
-     - name: Fernando Pacheco
-       email: fpacheco@redhat.com
-       gluser: pachecof
      - name: Juri Lelli
        email: jlelli@redhat.com
        gluser: jlelli
