owners.yaml: Add maintainers and reviewers for automotive configs
This commit introduce a section for Automotive configs. We don't want to
notify other engineers that are not part of the automotive scope to
review content that they are not involved. The automotive maintainers
should own all config changes inside the redhat configs directory.

Signed-off-by: Julio Faracco <jfaracco@redhat.com>

--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -1148,6 +1148,42 @@ subsystems:
           - include/linux/audit.h
           - include/uapi/linux/audit.h
           - kernel/audit*
+ - subsystem: AUTOMOTIVE
+   labes:
+     name: automotive
+   status: Supported
+   maintainers:
+     - name: Julio Faracco
+       email: jfaracco@redhat.com
+       gluser: jfaracco
+     - name: Scott Weaver
+       email: scweaver@redhat.com
+       gluser: scweaver
+   reviewers:
+     - name: Adrien Thierry
+       email: athierry@redhat.com
+       gluser: athierry1
+     - name: Alessandro Carminati
+       email: acarmina@redhat.com
+       gluser: acarmina
+     - name: Andrew Halaney
+       email: ahalaney@redhat.com
+       gluser: ahalaney
+     - name: Brian Masney
+       email: bmasney@redhat.com
+       gluser: bmasney
+     - name: Christoffer Hall Frederiksen
+       email: challfre@redhat.com
+       gluser: challfre
+     - name: Eric Chanudet
+       email: echanude@redhat.com
+       gluser: echanude
+     - name: Shawn Doherty
+       email: sdoherty@redhat.com
+       gluser: shawn_doherty
+   paths:
+       includes:
+          - redhat/configs/automotive/
  - subsystem: AUXILIARY DISPLAY DRIVERS
    labels:
      name: auxdisplay
