--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -345,6 +345,9 @@ include/linux/audit.h	rbriggs@redhat.com
 include/uapi/linux/audit.h	rbriggs@redhat.com
 kernel/audit*	rbriggs@redhat.com
 
+^[AUTOMOTIVE]
+redhat/configs/automotive/	jfaracco@redhat.com scweaver@redhat.com
+
 ^[BE2NET ETHERNET DRIVER (be2net)]
 drivers/net/ethernet/emulex/benet/	poros@redhat.com
 
