--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -9,6 +9,7 @@ config HID
 	tristate "HID bus support"
 	depends on INPUT
 	default y
+	depends on INPUT
 	help
 	  A human interface device (HID) is a type of computer device that
 	  interacts directly with and takes input from humans. The term "HID"
