info/owners.yaml: add williams to general kernel reviewers
Add me as a general kernel reviewer

Signed-off-by: Clark Williams <williams@redhat.com>

--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -229,6 +229,9 @@ subsystems:
      - name: Eder Zulian
        email: ezulian@redhat.com
        gluser: ezulian
+     - name: Clark Williams
+       email: williams@redhat.com
+       gluser: clrkwllms
    paths:
        includes:
           - makefile
