info/owners.yaml: Update X86 CPU POWER MANAGEMENT
Update X86 CPU POWER MANAGEMENT to include all AMD
files in drivers/cpufreq/.

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/info/CODEOWNERS
+++ b/info/CODEOWNERS
@@ -399,10 +399,7 @@ include/linux/counter_enum.h	dledford@redhat.com prarit@redhat.com
 [CPU FREQUENCY DRIVERS]
 drivers/cpufreq/	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
 ^drivers/cpufreq/intel_pstate.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
-^drivers/cpufreq/amd-pstate-trace.h	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
-^drivers/cpufreq/amd_freq_sensitivity.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
-^drivers/cpufreq/amd-pstate.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
-^drivers/cpufreq/amd-pstate-trace.c	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
+^drivers/cpufreq/amd*	mlangsdo@redhat.com lszubowi@redhat.com prarit@redhat.com darcari@redhat.com
 
 [CPU IDLE DRIVERS]
 drivers/cpuidle/	mlangsdo@redhat.com prarit@redhat.com darcari@redhat.com
@@ -1881,10 +1878,7 @@ tools/power/x86/	darcari@redhat.com prarit@redhat.com dnelson@redhat.com
 [X86 CPU POWER MANAGEMENT]
 arch/x86/kernel/cpu/cpufreq/	prarit@redhat.com darcari@redhat.com
 drivers/cpufreq/intel_pstate.c	prarit@redhat.com darcari@redhat.com
-drivers/cpufreq/amd-pstate-trace.h	prarit@redhat.com darcari@redhat.com
-drivers/cpufreq/amd_freq_sensitivity.c	prarit@redhat.com darcari@redhat.com
-drivers/cpufreq/amd-pstate.c	prarit@redhat.com darcari@redhat.com
-drivers/cpufreq/amd-pstate-trace.c	prarit@redhat.com darcari@redhat.com
+drivers/cpufreq/amd*	prarit@redhat.com darcari@redhat.com
 drivers/idle/intel_idle.c	prarit@redhat.com darcari@redhat.com
 drivers/idle/Kconfig	prarit@redhat.com darcari@redhat.com
 
