--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -2128,10 +2128,7 @@ subsystems:
           - drivers/cpufreq/
        excludes:
           - drivers/cpufreq/intel_pstate.c
-          - drivers/cpufreq/amd-pstate-trace.h
-          - drivers/cpufreq/amd_freq_sensitivity.c
-          - drivers/cpufreq/amd-pstate.c
-          - drivers/cpufreq/amd-pstate-trace.c
+          - drivers/cpufreq/amd*
  - subsystem: CPU IDLE DRIVERS
    labels:
      name: cpuidle
@@ -8658,10 +8655,7 @@ subsystems:
        includes:
           - arch/x86/kernel/cpu/cpufreq/
           - drivers/cpufreq/intel_pstate.c
-          - drivers/cpufreq/amd-pstate-trace.h
-          - drivers/cpufreq/amd_freq_sensitivity.c
-          - drivers/cpufreq/amd-pstate.c
-          - drivers/cpufreq/amd-pstate-trace.c
+          - drivers/cpufreq/amd*
           - drivers/idle/intel_idle.c
           - drivers/idle/Kconfig
  - subsystem: X86 FPU SUBSYSTEM
