--- a/info/owners.yaml
+++ b/info/owners.yaml
@@ -1120,6 +1120,9 @@ subsystems:
      - name: Eric Chanudet
        email: echanude@redhat.com
        gluser: echanude
+     - name: Radu Rendec
+       email: rrendec@redhat.com
+       gluser: rh-ee-rrendec
    paths:
        includes:
           - Documentation/devicetree/bindings/*/qcom*
