redhat: rpminspect: ignore perf coresight tests
Bugzilla: INTERNAL
Upstream Status: RHEL only

Ignore perf tests, some are in direct assembly,
and are not built with debuginfo, so they raise
couple failures.

Signed-off-by: Jan Stancek <jstancek@redhat.com>

--- a/redhat/rpminspect.yaml
+++ b/redhat/rpminspect.yaml
@@ -36,3 +36,8 @@ runpath:
 debuginfo:
     ignore:
         - /usr/libexec/kselftests/bpf/*
+        - /usr/libexec/perf-core/tests/shell/coresight/*
+
+elf:
+    ignore:
+        - /usr/libexec/perf-core/tests/shell/coresight/*
